--- a/css/lennys-fabulous-site-910d04.webflow.css
+++ b/css/lennys-fabulous-site-910d04.webflow.css
@@ -795,8 +795,8 @@ figcaption {
 .card-grid {
   grid-column-gap: 2rem;
   grid-row-gap: 4rem;
-  grid-template-rows: auto auto;
-  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Responsive column layout */
   grid-auto-columns: 1fr;
   place-items: stretch center;
   width: 100%;
